// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserRepository should call login API for OTP and return response 1`] = `
User {
  "_accessToken": "access_token",
  "_countryCode": "",
  "_email": "r@gmail.com",
  "_firstName": "",
  "_fullName": "Rishabh Modi",
  "_id": 0,
  "_isAssetOwner": false,
  "_lastName": "",
  "_phoneNumber": "99999999",
  "_profilePicture": "",
  "_rating": 0,
  "_refreshToken": "refresh_token",
  "_workInfo": WorkInfo {
    "_company": Company {
      "_emailDomain": "",
      "_hqAddressLine1": "",
      "_hqAddressLine2": "",
      "_id": 0,
      "_location": LocationDetails {
        "_city": 0,
        "_cityName": "",
        "_country": 0,
        "_countryName": "",
        "_id": 0,
        "_iso2Code": "",
        "_iso3Code": "",
        "_phoneCodes": Array [],
        "_region": 0,
        "_regionName": "",
      },
      "_longName": "",
      "_name": "",
      "_postalCode": "",
    },
    "_companyName": "",
    "_emailVerified": false,
    "_id": 0,
    "_jobType": Unit {
      "_code": "",
      "_description": "",
      "_fieldType": "",
      "_id": -1,
      "_label": "",
      "_name": "",
      "_order": -1,
      "_title": "",
      "_type": "",
      "_value": "",
    },
    "_workEmail": null,
    "_workEmployeeId": "",
  },
}
`;

exports[`UserRepository should call login API for email and return response 1`] = `
User {
  "_accessToken": "access_token",
  "_countryCode": "",
  "_email": "r@gmail.com",
  "_firstName": "",
  "_fullName": "Rishabh Modi",
  "_id": 0,
  "_isAssetOwner": false,
  "_lastName": "",
  "_phoneNumber": "99999999",
  "_profilePicture": "",
  "_rating": 0,
  "_refreshToken": "refresh_token",
  "_workInfo": WorkInfo {
    "_company": Company {
      "_emailDomain": "",
      "_hqAddressLine1": "",
      "_hqAddressLine2": "",
      "_id": 0,
      "_location": LocationDetails {
        "_city": 0,
        "_cityName": "",
        "_country": 0,
        "_countryName": "",
        "_id": 0,
        "_iso2Code": "",
        "_iso3Code": "",
        "_phoneCodes": Array [],
        "_region": 0,
        "_regionName": "",
      },
      "_longName": "",
      "_name": "",
      "_postalCode": "",
    },
    "_companyName": "",
    "_emailVerified": false,
    "_id": 0,
    "_jobType": Unit {
      "_code": "",
      "_description": "",
      "_fieldType": "",
      "_id": -1,
      "_label": "",
      "_name": "",
      "_order": -1,
      "_title": "",
      "_type": "",
      "_value": "",
    },
    "_workEmail": null,
    "_workEmployeeId": "",
  },
}
`;

exports[`UserRepository should call otp API for fetch 1`] = `
Object {
  "otp_sent": true,
}
`;

exports[`UserRepository should call otp API for verify 1`] = `
Object {
  "otp_verify": true,
}
`;

exports[`UserRepository should call socialLogin and return for no user 1`] = `
Object {
  "is_new_user": false,
}
`;

exports[`UserRepository should call socialLogin and return response 1`] = `
User {
  "_accessToken": "access_token",
  "_countryCode": "",
  "_email": "r@gmail.com",
  "_firstName": "",
  "_fullName": "Rishabh Modi",
  "_id": 0,
  "_isAssetOwner": false,
  "_lastName": "",
  "_phoneNumber": "99999999",
  "_profilePicture": "",
  "_rating": 0,
  "_refreshToken": "refresh_token",
  "_workInfo": WorkInfo {
    "_company": Company {
      "_emailDomain": "",
      "_hqAddressLine1": "",
      "_hqAddressLine2": "",
      "_id": 0,
      "_location": LocationDetails {
        "_city": 0,
        "_cityName": "",
        "_country": 0,
        "_countryName": "",
        "_id": 0,
        "_iso2Code": "",
        "_iso3Code": "",
        "_phoneCodes": Array [],
        "_region": 0,
        "_regionName": "",
      },
      "_longName": "",
      "_name": "",
      "_postalCode": "",
    },
    "_companyName": "",
    "_emailVerified": false,
    "_id": 0,
    "_jobType": Unit {
      "_code": "",
      "_description": "",
      "_fieldType": "",
      "_id": -1,
      "_label": "",
      "_name": "",
      "_order": -1,
      "_title": "",
      "_type": "",
      "_value": "",
    },
    "_workEmail": null,
    "_workEmployeeId": "",
  },
}
`;

exports[`UserRepository should check if email exists 1`] = `
Object {
  "is_exists": true,
}
`;

exports[`UserRepository should check if phone exists 1`] = `
Object {
  "is_exists": true,
}
`;

exports[`UserRepository should get user subscription 1`] = `
UserSubscription {
  "_recommendedPlan": SubscribedPlan {
    "_appleProductId": null,
    "_id": 2,
    "_isTrialPlan": null,
    "_label": "Pro",
    "_name": "Pro_IND",
    "_serviceBundleItems": Array [
      ServiceBundleItems {
        "_attachment": Attachment {
          "_attachmentLink": "",
          "_fileName": "name1.jpg",
          "_id": 1,
          "_isCoverImage": false,
          "_label": "",
          "_link": "https://homzhub-bucket.s3.amazonaws.com/assest_documents/id.jpeg",
          "_mediaAttributes": MediaAttributes {
            "_duration": "",
            "_thumbnail": "",
            "_thumbnailBest": "",
            "_thumbnailHD": "",
            "_thumbnailSD": "",
            "_title": "",
            "_videoId": "",
          },
          "_mediaType": "IMAGE",
          "_name": "",
          "_presignedReferenceKey": "",
        },
        "_description": "",
        "_displayOrder": 1,
        "_id": 6,
        "_label": "Promotion to our agent network",
        "_name": "PROMOTION_TO_OUR_AGENT_NETWORK",
        "_serviceItemCategory": Unit {
          "_code": "",
          "_description": "",
          "_fieldType": "",
          "_id": -1,
          "_label": "",
          "_name": "",
          "_order": -1,
          "_title": "",
          "_type": "",
          "_value": "",
        },
      },
      ServiceBundleItems {
        "_attachment": Attachment {
          "_attachmentLink": "",
          "_fileName": "name1.jpg",
          "_id": 1,
          "_isCoverImage": false,
          "_label": "",
          "_link": "https://homzhub-bucket.s3.amazonaws.com/assest_documents/id.jpeg",
          "_mediaAttributes": MediaAttributes {
            "_duration": "",
            "_thumbnail": "",
            "_thumbnailBest": "",
            "_thumbnailHD": "",
            "_thumbnailSD": "",
            "_title": "",
            "_videoId": "",
          },
          "_mediaType": "IMAGE",
          "_name": "",
          "_presignedReferenceKey": "",
        },
        "_description": "",
        "_displayOrder": 2,
        "_id": 7,
        "_label": "Verified tag on property",
        "_name": "VERIFIED_TAG_ON_PROPERTY",
        "_serviceItemCategory": Unit {
          "_code": "",
          "_description": "",
          "_fieldType": "",
          "_id": -1,
          "_label": "",
          "_name": "",
          "_order": -1,
          "_title": "",
          "_type": "",
          "_value": "",
        },
      },
      ServiceBundleItems {
        "_attachment": Attachment {
          "_attachmentLink": "",
          "_fileName": "name1.jpg",
          "_id": 1,
          "_isCoverImage": false,
          "_label": "",
          "_link": "https://homzhub-bucket.s3.amazonaws.com/assest_documents/id.jpeg",
          "_mediaAttributes": MediaAttributes {
            "_duration": "",
            "_thumbnail": "",
            "_thumbnailBest": "",
            "_thumbnailHD": "",
            "_thumbnailSD": "",
            "_title": "",
            "_videoId": "",
          },
          "_mediaType": "IMAGE",
          "_name": "",
          "_presignedReferenceKey": "",
        },
        "_description": "",
        "_displayOrder": 3,
        "_id": 8,
        "_label": "Expert Description",
        "_name": "EXPERT_DESCRIPTION",
        "_serviceItemCategory": Unit {
          "_code": "",
          "_description": "",
          "_fieldType": "",
          "_id": -1,
          "_label": "",
          "_name": "",
          "_order": -1,
          "_title": "",
          "_type": "",
          "_value": "",
        },
      },
      ServiceBundleItems {
        "_attachment": Attachment {
          "_attachmentLink": "",
          "_fileName": "name1.jpg",
          "_id": 1,
          "_isCoverImage": false,
          "_label": "",
          "_link": "https://homzhub-bucket.s3.amazonaws.com/assest_documents/id.jpeg",
          "_mediaAttributes": MediaAttributes {
            "_duration": "",
            "_thumbnail": "",
            "_thumbnailBest": "",
            "_thumbnailHD": "",
            "_thumbnailSD": "",
            "_title": "",
            "_videoId": "",
          },
          "_mediaType": "IMAGE",
          "_name": "",
          "_presignedReferenceKey": "",
        },
        "_description": "",
        "_displayOrder": 4,
        "_id": 9,
        "_label": "Professional Photoshoot",
        "_name": "PROFESSIONAL_PHOTOSHOOT",
        "_serviceItemCategory": Unit {
          "_code": "",
          "_description": "",
          "_fieldType": "",
          "_id": -1,
          "_label": "",
          "_name": "",
          "_order": -1,
          "_title": "",
          "_type": "",
          "_value": "",
        },
      },
      ServiceBundleItems {
        "_attachment": Attachment {
          "_attachmentLink": "",
          "_fileName": "name1.jpg",
          "_id": 1,
          "_isCoverImage": false,
          "_label": "",
          "_link": "https://homzhub-bucket.s3.amazonaws.com/assest_documents/id.jpeg",
          "_mediaAttributes": MediaAttributes {
            "_duration": "",
            "_thumbnail": "",
            "_thumbnailBest": "",
            "_thumbnailHD": "",
            "_thumbnailSD": "",
            "_title": "",
            "_videoId": "",
          },
          "_mediaType": "IMAGE",
          "_name": "",
          "_presignedReferenceKey": "",
        },
        "_description": "",
        "_displayOrder": 4,
        "_id": 10,
        "_label": "Professional Photoshoot",
        "_name": "PROFESSIONAL_PHOTOSHOOT",
        "_serviceItemCategory": Unit {
          "_code": "",
          "_description": "",
          "_fieldType": "",
          "_id": -1,
          "_label": "",
          "_name": "",
          "_order": -1,
          "_title": "",
          "_type": "",
          "_value": "",
        },
      },
      ServiceBundleItems {
        "_attachment": Attachment {
          "_attachmentLink": "",
          "_fileName": "name1.jpg",
          "_id": 1,
          "_isCoverImage": false,
          "_label": "",
          "_link": "https://homzhub-bucket.s3.amazonaws.com/assest_documents/id.jpeg",
          "_mediaAttributes": MediaAttributes {
            "_duration": "",
            "_thumbnail": "",
            "_thumbnailBest": "",
            "_thumbnailHD": "",
            "_thumbnailSD": "",
            "_title": "",
            "_videoId": "",
          },
          "_mediaType": "IMAGE",
          "_name": "",
          "_presignedReferenceKey": "",
        },
        "_description": "",
        "_displayOrder": 4,
        "_id": 11,
        "_label": "Professional Photoshoot",
        "_name": "PROFESSIONAL_PHOTOSHOOT",
        "_serviceItemCategory": Unit {
          "_code": "",
          "_description": "",
          "_fieldType": "",
          "_id": -1,
          "_label": "",
          "_name": "",
          "_order": -1,
          "_title": "",
          "_type": "",
          "_value": "",
        },
      },
    ],
  },
  "_userServicePlan": SubscribedPlan {
    "_appleProductId": null,
    "_id": 1,
    "_isTrialPlan": null,
    "_label": "Lite",
    "_name": "Lite_IND",
    "_serviceBundleItems": Array [
      ServiceBundleItems {
        "_attachment": Attachment {
          "_attachmentLink": "",
          "_fileName": "name2.jpg",
          "_id": 2,
          "_isCoverImage": false,
          "_label": "",
          "_link": "https://homzhub-bucket.s3.amazonaws.com/assest_documents/selfie_id.jpeg",
          "_mediaAttributes": MediaAttributes {
            "_duration": "",
            "_thumbnail": "",
            "_thumbnailBest": "",
            "_thumbnailHD": "",
            "_thumbnailSD": "",
            "_title": "",
            "_videoId": "",
          },
          "_mediaType": "IMAGE",
          "_name": "",
          "_presignedReferenceKey": "",
        },
        "_description": "",
        "_displayOrder": 1,
        "_id": 1,
        "_label": "Website Listing",
        "_name": "WEBSITE_LISTING",
        "_serviceItemCategory": Unit {
          "_code": "",
          "_description": "",
          "_fieldType": "",
          "_id": -1,
          "_label": "",
          "_name": "",
          "_order": -1,
          "_title": "",
          "_type": "",
          "_value": "",
        },
      },
      ServiceBundleItems {
        "_attachment": Attachment {
          "_attachmentLink": "",
          "_fileName": "name1.jpg",
          "_id": 1,
          "_isCoverImage": false,
          "_label": "",
          "_link": "https://homzhub-bucket.s3.amazonaws.com/assest_documents/id.jpeg",
          "_mediaAttributes": MediaAttributes {
            "_duration": "",
            "_thumbnail": "",
            "_thumbnailBest": "",
            "_thumbnailHD": "",
            "_thumbnailSD": "",
            "_title": "",
            "_videoId": "",
          },
          "_mediaType": "IMAGE",
          "_name": "",
          "_presignedReferenceKey": "",
        },
        "_description": "",
        "_displayOrder": 2,
        "_id": 2,
        "_label": "Social Media",
        "_name": "SOCIAL_MEDIA",
        "_serviceItemCategory": Unit {
          "_code": "",
          "_description": "",
          "_fieldType": "",
          "_id": -1,
          "_label": "",
          "_name": "",
          "_order": -1,
          "_title": "",
          "_type": "",
          "_value": "",
        },
      },
      ServiceBundleItems {
        "_attachment": Attachment {
          "_attachmentLink": "",
          "_fileName": "name1.jpg",
          "_id": 1,
          "_isCoverImage": false,
          "_label": "",
          "_link": "https://homzhub-bucket.s3.amazonaws.com/assest_documents/id.jpeg",
          "_mediaAttributes": MediaAttributes {
            "_duration": "",
            "_thumbnail": "",
            "_thumbnailBest": "",
            "_thumbnailHD": "",
            "_thumbnailSD": "",
            "_title": "",
            "_videoId": "",
          },
          "_mediaType": "IMAGE",
          "_name": "",
          "_presignedReferenceKey": "",
        },
        "_description": "",
        "_displayOrder": 3,
        "_id": 3,
        "_label": "SMS",
        "_name": "SMS",
        "_serviceItemCategory": Unit {
          "_code": "",
          "_description": "",
          "_fieldType": "",
          "_id": -1,
          "_label": "",
          "_name": "",
          "_order": -1,
          "_title": "",
          "_type": "",
          "_value": "",
        },
      },
      ServiceBundleItems {
        "_attachment": Attachment {
          "_attachmentLink": "",
          "_fileName": "name1.jpg",
          "_id": 1,
          "_isCoverImage": false,
          "_label": "",
          "_link": "https://homzhub-bucket.s3.amazonaws.com/assest_documents/id.jpeg",
          "_mediaAttributes": MediaAttributes {
            "_duration": "",
            "_thumbnail": "",
            "_thumbnailBest": "",
            "_thumbnailHD": "",
            "_thumbnailSD": "",
            "_title": "",
            "_videoId": "",
          },
          "_mediaType": "IMAGE",
          "_name": "",
          "_presignedReferenceKey": "",
        },
        "_description": "",
        "_displayOrder": 4,
        "_id": 4,
        "_label": "Email",
        "_name": "EMAIL",
        "_serviceItemCategory": Unit {
          "_code": "",
          "_description": "",
          "_fieldType": "",
          "_id": -1,
          "_label": "",
          "_name": "",
          "_order": -1,
          "_title": "",
          "_type": "",
          "_value": "",
        },
      },
      ServiceBundleItems {
        "_attachment": Attachment {
          "_attachmentLink": "",
          "_fileName": "name1.jpg",
          "_id": 1,
          "_isCoverImage": false,
          "_label": "",
          "_link": "https://homzhub-bucket.s3.amazonaws.com/assest_documents/id.jpeg",
          "_mediaAttributes": MediaAttributes {
            "_duration": "",
            "_thumbnail": "",
            "_thumbnailBest": "",
            "_thumbnailHD": "",
            "_thumbnailSD": "",
            "_title": "",
            "_videoId": "",
          },
          "_mediaType": "IMAGE",
          "_name": "",
          "_presignedReferenceKey": "",
        },
        "_description": "",
        "_displayOrder": 5,
        "_id": 5,
        "_label": "Digital Advertisements",
        "_name": "DIGITAL_ADVERTISEMENTS",
        "_serviceItemCategory": Unit {
          "_code": "",
          "_description": "",
          "_fieldType": "",
          "_id": -1,
          "_label": "",
          "_name": "",
          "_order": -1,
          "_title": "",
          "_type": "",
          "_value": "",
        },
      },
    ],
  },
}
`;

exports[`UserRepository should logout 1`] = `Object {}`;
